2009-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/srecode/insert.el: Require srecode/args.

	* cedet/srecode/args.el: Require srecode/dictionary instead of
	srecode/insert.

	* cedet/srecode/srt-mode.el (srecode-template-mode): Doc fix.

	* files.el (auto-mode-alist): Add .srt and Project.ede.

	* cedet/semantic.el (semantic-mode): Handle
	srecode-template-mode-hook as well.
	(semantic-mode): Use js-mode-hook for Javascript hook.

	* cedet/srecode/template.el: Remove hook variable.

	* cedet/ede/proj-comp.el: Require ede/pmake when compiling.

	* cedet/ede.el (ede-target-forms-menu): Don't enable if no
	projects exist.
	(ede-project-placeholder-cache-file): Default to a file in
	user-emacs-directory.

	* cedet/srecode/map.el (srecode-map-base-template-dir): Look for
	templates in data-directory.
	(srecode-map-save-file): Default to a file in
	user-emacs-directory.

	* cedet/ede/srecode.el (ede-srecode-setup): Use default templates
	directory.

2009-09-30  Eric Ludlam  <zappo@gnu.org>

	* cedet/semantic/util-modes.el (semantic-highlight-func-mode): Doc
	fix.

	* cedet/ede/proj-comp.el (ede-proj-makefile-insert-variables):
	Only insert each variable once.

	* cedet/ede/pmake.el (ede-pmake-insert-variable-once): New macro.
	(ede-pmake-insert-variable-shared): Use it.

	* cedet/ede/cpp-root.el (ede-preprocessor-map): Do not deref table
	for lexical table iff table is nil.

2009-10-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Remove commented out code.
	(vc-derived-from-dir-mode): Remove, unused.
	(vc-version-diff, vc-diff): Consistently pass t to vc-deduce-fileset.

2009-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-ftp.el (tramp-ftp-file-name-handler): Disable
	`file-name-handler-alist' when loading 'ange-ftp.  Otherwise,
	there could be recursive loading when `default-directory' is a
	remote file name.  (Bug#4614)

2009-10-03  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-basic-setup): Handle the case where